--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@ include '2-stop-actors'
 include '3-failure-handling'
 include '4-request-response-pattern'
 include '5-terminate-actor-system'
-include '6-exceptions'
+include '6-exception-handling-strategy'
