--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,4 @@ include '3-failure-handling'
 include '4-request-response-pattern'
 include '5-terminate-actor-system'
 include '6-exception-handling-strategy'
-//include '7-cluster-singleton'
+include '7-cluster-singleton'
