--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include '4-request-response-pattern'
 include '5-terminate-actor-system'
 include '6-exception-handling-strategy'
 include '7-cluster-singleton'
+include '8-cluster-sharding'
