--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include '5-terminate-actor-system'
 include '6-exception-handling-strategy'
 include '7-cluster-singleton'
 include '8-cluster-sharding'
+include '9-http-server-basic'
