--- a/8-cluster-sharding/build.gradle
+++ b/8-cluster-sharding/build.gradle
@@ -12,3 +12,7 @@ dependencies {
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
+
+application {
+    mainClass = "ClusterPekkoApplication"
+}
