Remove ./gradlew in submodules

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include '6-exception-handling-strategy'
 include '7-cluster-singleton'
 include '8-cluster-sharding'
 include '9-http-server-basic'
+include '10-http-server-websocket'
