--- a/10-http-server-websocket/build.gradle
+++ b/10-http-server-websocket/build.gradle
@@ -6,3 +6,7 @@ dependencies {
     implementation "org.apache.pekko:pekko-stream_${project.versions.ScalaBinary}"
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
+
+application {
+    mainClass = "HttpServerWebSocketExample"
+}
